# miraki

./: .eslintrc.js  .gitignore  .pnp.cjs  README.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  tsconfig.json  turbo.json
apps/server/: README.md  manage.py  mirkai.session.sql  pyproject.toml
apps/server/authentication/: authentications.py  models.py  serializers.py  urls.py  views.py
apps/server/authentication/migrations/: 0001_initial.py
apps/server/dappsuit/: apps.py  models.py  serializers.py  urls.py  views.py
apps/server/dappsuit/migrations/: 0001_initial.py  0002_alter_solanaprogramidl_docs.py  0003_remove_solanaprogramidl_docs_search_vector_and_more.py  0004_alter_solanaprogramidl_docs.py  0005_alter_solanaprogramidl_id.py  0006_alter_solanaprogramidl_id.py  0007_alter_solanaprogramidl_id.py
apps/server/proposal/: models.py  serializers.py  urls.py  views.py
apps/server/proposal/migrations/: 0001_initial.py  0002_rename_vote_selected_option_count_proposal_vote_selected_options_count_and_more.py  0003_rename_votes_counts_proposal_votes_count.py  0004_alter_proposal_end_timestamp_and_more.py  0005_alter_proposal_end_timestamp_and_more.py  0006_alter_proposal_description.py  0007_alter_proposal_vote_selected_options_count.py
apps/server/server/: settings.py  urls.py
apps/server/shared/: serializers.py
apps/server/shared/auth/: wallet_authentication.py
apps/server/space/: models.py  permissions.py  serializers.py  urls.py  views.py
apps/server/space/migrations/: 0001_initial.py  0002_alter_space_about_alter_space_avatar.py  (+8 more)
(+38 files in other folders)
